Bug 511586 - Switching from a color scheme with a non-default frame contrast value to a color scheme without a frame contrast value fails to reset frame colors
Summary: Switching from a color scheme with a non-default frame contrast value to a co...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_colors (other bugs)
Version First Reported In: 6.5.80
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-11-03 20:32 UTC by Nate Graham
Modified: 2025-11-05 10:35 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2025-11-03 20:32:52 UTC
STEPS TO REPRODUCE
1. Click on Breeze Light color scheme > Edit (pencil button)
2. Go to "Options" tab > change "Contrast" to 100%
3. "Save As…" > give it some name
4. Click on the new color scheme and click Apply
5. Click on the Breeze Light color scheme and click Apply


OBSERVED RESULT
The frames are still 100% black


EXPECTED RESULT
The frames are light, like they used to be


ADDITIONAL INFORMATION
I suspect what's going on here is that the Breeze Light color scheme doesn't have a frame contrast value specified, and the old value from the custom color scheme isn't being deleted when switching away from it, so it's still taking effect.


SOFTWARE/OS VERSIONS
Operating System: KDE Linux 2025-11-02
KDE Plasma Version: 6.5.80
KDE Frameworks Version: 6.20.0
Qt Version: 6.10.0
Kernel Version: 6.17.6-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 7840U w/ Radeon™ 780M Graphics
Memory: 17 GB of RAM (16.0 GB usable)
Graphics Processor: AMD Radeon 780M Graphics
Comment 1 Bug Janitor Service 2025-11-04 15:41:32 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5966
Comment 2 Akseli Lahtinen 2025-11-05 10:35:44 UTC
Git commit 4d72c3d99f0553233153afd1f531e56457102999 by Akseli Lahtinen.
Committed on 05/11/2025 at 09:29.
Pushed by akselmo into branch 'master'.

ColorsApplicator: Read frameContrast value from colorScheme

When reading the default entry, we need to use the colorscheme as the
frameContrast configuration. Otherwise we will load whatever is cached
in kdeglobals, even when the colorscheme has explicitly not set any
frameContrast value. This would then cause the old value to stay around,
even with different colorScheme.

M  +1    -1    kcms/colors/colorsapplicator.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/4d72c3d99f0553233153afd1f531e56457102999