ColorsApplicator: Read frameContrast value from colorScheme

When reading the default entry, we need to use the colorscheme as the
frameContrast configuration. Otherwise we will load whatever is cached
in kdeglobals, even when the colorscheme has explicitly not set any
frameContrast value. This would then cause the old value to stay around,
even with different colorScheme.

BUG: 511586